force-app/main/default/objects/SentimentAnalysisDefinitions__c/SentimentAnalysisDefinitions__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <description>Defines the sentiment analysis component definitions.</description>
    <label>Sentiment Analysis Definitions</label>
</CustomObject>