force-app/main/default/objects/SentimentAnalysisDefinitions__c/fields/CalculateSentimentButtonClick__c.field-meta.xml
<CustomField>
    <fullName>CalculateSentimentButtonClick__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Enables sentiment calculation when the agent clicks a button.</description>
    <label>Calculate sentiment on button click</label>
    <type>Checkbox</type>
</CustomField>