force-app/main/default/objects/SentimentAnalysisDefinitions__c/fields/CalculateSentimentConversationEnd__c.field-meta.xml
<CustomField>
    <fullName>CalculateSentimentConversationEnd__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Enables sentiment calculation at the end of the conversation.</description>
    <label>Calculate sentiment on conversation end</label>
    <type>Checkbox</type>
</CustomField>