force-app/main/default/objects/SentimentAnalysisDefinitions__c/fields/CalculateSentimentEveryMessage__c.field-meta.xml
<CustomField>
    <fullName>CalculateSentimentEveryMessage__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Enables sentiment calculation for every client message.</description>
    <label>Calculate sentiment on every message</label>
    <type>Checkbox</type>
</CustomField>