force-app/main/default/objects/SentimentAnalysisDefinitions__c/fields/ComponentEnabled__c.field-meta.xml
<CustomField>
    <fullName>ComponentEnabled__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Sets if the component is visible.</description>
    <label>Component enabled</label>
    <type>Checkbox</type>
</CustomField>